# mastermind

./: .gitignore  README.md  mastermind.py  mastermind_cli.py  mastermind_curriculum_train.py  pyproject.toml
analysis/: mastermind_grid_eval.py
